[package]
name = "ynab-swed"
version = "0.1.0"
authors = ["Karlis Lauva <karlis@karlis.me>"]
edition = "2018"

[dependencies]
clap = "2"
csv = "1"
md5 = "0.6.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rust_decimal = "1.2.1"
serde = { version = "1.0.100", features = ["derive"] }
