[package]
name = "ynab-swed"
version = "0.1.0"
authors = ["Karlis Lauva <karlis@karlis.me>"]
edition = "2021"

[dependencies]
clap = "2"
csv = "1"
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
